--- a/package.json
+++ b/package.json
@@ -26,13 +26,10 @@
   },
   "homepage": "https://github.com/jeannchung/employ-me#readme",
   "dependencies": {
-    "@material-ui/core": "^3.8.1",
-    "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
     "mongoose": "^5.4.2",
-    "react": "^16.7.0",
-    "react-router-dom": "^4.3.1"
+    "react": "^16.7.0"
   }
 }
