--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.7.0",
     "react-firebaseui": "^3.1.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.2"
+    "react-scripts": "2.1.2",
+    "react-select": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
