--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.18.0",
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
+    "if-env": "^1.0.4",
     "mongoose": "^5.4.2",
     "react": "^16.7.0"
   }
